<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.jason.webdataretrieve.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout android:id="@+id/layout_get_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText android:id="@+id/et_bar_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_margin"
            android:hint="@string/please_input_a_bar_code"
            android:maxEms="13"
            android:inputType="numberDecimal"/>

        <Button android:id="@+id/btn_http_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_product_info"
            android:layout_marginBottom="@dimen/item_margin"/>

        <WebView android:id="@+id/wv_barcode_checking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </WebView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/layout_get_info"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/product_ref_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/ref_price"
                style="@style/ProductInfoView"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/product_producer_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/producer_code"
                style="@style/ProductInfoView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/product_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/country"
                style="@style/ProductInfoView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/product_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView  android:id="@+id/producer"
                style="@style/ProductInfoView" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
